# poziomka

./: .gitmodules  CMakeLists.txt  History.md  Makefile  Readme.md  index.js  package.json
.github/workflows/: check.yaml
lib/: promises.js
src/: poziomka.cc  poziomka.h  slice.h  workers.cc  workers.h
test/: poziomka.js  promises.js
